# haskell-effects

./: flake.nix  haskell-effects.cabal  hie.yaml
src/Control/: Effect.hs
src/Control/Effect/: Coroutine.hs  FSM.hs  Internal.hs  Lift.hs
src/Control/Monad/: Effect.hs  Interrupt.hs
src/Examples/: Coroutine.hs
src/Haskell/: Continuation.hs  Effect.hs  Interrupt.hs
