cabal-version:      2.2

name:               haskell-effects
version:            0.0.0

copyright:          Copyright (C) 2023-2024, Simon Lovell Bart
maintainer:         exclusiveandgate@gmail.com
build-type:         Simple

library
    default-language: Haskell2010

    default-extensions:
        BangPatterns
        DataKinds
        EmptyCase
        ExistentialQuantification
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        NoStarIsType
        PatternSynonyms
        QuantifiedConstraints
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UnboxedTuples
        UnliftedNewtypes

    other-extensions:
        MagicHash
        RankNTypes
        UnboxedTuples

    hs-source-dirs: src

    exposed-modules:
        Control.Monad.Interrupt
        Control.Effect
        -- Examples.Coroutine

    ghc-options: -Wall -Wcompat

    build-depends:
        base                    >= 4.18     && < 5,
        primitive
